k8s/ingress-controller/magical-nginx-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: magical-nginx-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: magical-nginx
  template:
    metadata:
      labels:
        app: magical-nginx
    spec:
      containers:
        - name: magical-nginx
          image: anshuldevops/magicalnginx:latest
          ports:
            - containerPort: 8080
              name: nginx-port
