k8s/ingress-controller/magical-nginx-service.yml
apiVersion: v1
kind: Service
metadata:
  name: magical-nginx-service
spec:
  type: NodePort
  selector:
    app: magical-nginx
  ports:
    - port: 80
      nodePort: 31304
      protocol: TCP
      name: http
