k8s/ingress-controller/nginx-deployment-service.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-official-service
spec:
  type: NodePort
  selector:
    app: nginx-official
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      nodePort: 31303
