k8s/ingress-controller/ingress-contoller.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-rules
spec:
  rules:
    - host: nginx-official.example.com
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: nginx-official-service
                port:
                  number: 80

    - host: magical-nginx.example.com
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: magical-nginx-service
                port:
                  name: http
